--- a/config/sync/core.entity_view_display.node.blog.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog.teaser.yml
@@ -1,6 +1,6 @@
 uuid: 60c61d15-d319-408c-8cbd-7f62c7ce9a88
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
@@ -12,7 +12,6 @@ dependencies:
     - node.type.blog
   module:
     - layout_builder
-    - layout_discovery
     - text
     - user
 third_party_settings:
