Switch from CDN FontAwesome to Sass

--- a/web/themes/oc_patterns/.stylelintrc
+++ b/web/themes/oc_patterns/.stylelintrc
@@ -13,7 +13,10 @@
         "each",
         "content",
         "for",
-        "else"
+        "else",
+	"support",
+	"function",
+	"return"
       ]
     }],
      "indentation": tab,
