--- a/config/sync/responsive_image.styles.oc_large_thumb.yml
+++ b/config/sync/responsive_image.styles.oc_large_thumb.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - image.style.oc_thumbnail_large
+    - image.style.oc_thumbnail_large_1_5x
     - image.style.oc_thumbnail_large_2x
   theme:
     - oc_patterns
@@ -13,14 +14,19 @@ id: oc_large_thumb
 label: 'OC Large Thumb'
 image_style_mappings:
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: oc_thumbnail_large_1_5x
+  -
+    breakpoint_id: oc_patterns.mobile
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: oc_thumbnail_large
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: oc_thumbnail_large_2x
 breakpoint_group: oc_patterns
-fallback_image_style: oc_thumbnail_large_2x
+fallback_image_style: oc_thumbnail_large
