--- a/config/sync/responsive_image.styles.350x350.yml
+++ b/config/sync/responsive_image.styles.350x350.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - image.style.350x350
+    - image.style.350x350_1_5x
     - image.style.350x350_2x
   theme:
     - oc_patterns
@@ -13,14 +14,19 @@ id: 350x350
 label: 350x350
 image_style_mappings:
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: 350x350_1_5x
+  -
+    breakpoint_id: oc_patterns.mobile
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: 350x350
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: 350x350_2x
 breakpoint_group: oc_patterns
-fallback_image_style: 350x350_2x
+fallback_image_style: 350x350
