--- a/config/sync/responsive_image.styles.full_1200.yml
+++ b/config/sync/responsive_image.styles.full_1200.yml
@@ -6,8 +6,10 @@ dependencies:
     - image.style.large_800
     - image.style.maxwidth_1200
     - image.style.medium_500
+    - image.style.medium_500_1_5x
     - image.style.medium_500_2x
     - image.style.small_300
+    - image.style.small_300_1_5x
     - image.style.small_300_2x
   theme:
     - oc_patterns
@@ -15,32 +17,42 @@ id: full_1200
 label: 'Full (1200)'
 image_style_mappings:
   -
-    breakpoint_id: oc_patterns.images.bigdesk
+    breakpoint_id: oc_patterns.bigdesk
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: maxwidth_1200
   -
-    breakpoint_id: oc_patterns.images.desk
+    breakpoint_id: oc_patterns.desk
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: large_800
   -
-    breakpoint_id: oc_patterns.images.tablet
+    breakpoint_id: oc_patterns.tablet
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: medium_500_1_5x
+  -
+    breakpoint_id: oc_patterns.tablet
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: medium_500
   -
-    breakpoint_id: oc_patterns.images.tablet
+    breakpoint_id: oc_patterns.tablet
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: medium_500_2x
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: small_300_1_5x
+  -
+    breakpoint_id: oc_patterns.mobile
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: small_300
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: small_300_2x
