--- a/config/sync/responsive_image.styles.medium_500.yml
+++ b/config/sync/responsive_image.styles.medium_500.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - image.style.medium_500
+    - image.style.medium_500_1_5x
     - image.style.medium_500_2x
     - image.style.small_300
+    - image.style.small_300_1_5x
     - image.style.small_300_2x
   theme:
     - oc_patterns
@@ -15,22 +17,32 @@ id: medium_500
 label: 'Medium (500)'
 image_style_mappings:
   -
-    breakpoint_id: oc_patterns.images.tablet
+    breakpoint_id: oc_patterns.tablet
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: medium_500_1_5x
+  -
+    breakpoint_id: oc_patterns.tablet
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: medium_500
   -
-    breakpoint_id: oc_patterns.images.tablet
+    breakpoint_id: oc_patterns.tablet
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: medium_500_2x
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: small_300_1_5x
+  -
+    breakpoint_id: oc_patterns.mobile
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: small_300
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: small_300_2x
