--- a/config/sync/responsive_image.styles.small_300.yml
+++ b/config/sync/responsive_image.styles.small_300.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - image.style.small_300
+    - image.style.small_300_1_5x
     - image.style.small_300_2x
   theme:
     - oc_patterns
@@ -13,14 +14,19 @@ id: small_300
 label: 'Small (300)'
 image_style_mappings:
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
+    multiplier: 1.5x
+    image_mapping_type: image_style
+    image_mapping: small_300_1_5x
+  -
+    breakpoint_id: oc_patterns.mobile
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: small_300
   -
-    breakpoint_id: oc_patterns.images.mobile
+    breakpoint_id: oc_patterns.mobile
     multiplier: 2x
     image_mapping_type: image_style
     image_mapping: small_300_2x
 breakpoint_group: oc_patterns
-fallback_image_style: small_300_2x
+fallback_image_style: small_300
