--- a/web/themes/oc_patterns/oc_patterns.breakpoints.yml
+++ b/web/themes/oc_patterns/oc_patterns.breakpoints.yml
@@ -1,26 +1,28 @@
-oc_patterns.images.mobile:
+oc_patterns.mobile:
   label: Mobile
-  mediaQuery: '(min-width: 0px)'
+  mediaQuery: ''
   weight: 0
   multipliers:
     - 1x
+    - 1.5x
     - 2x
-oc_patterns.images.tablet:
+oc_patterns.tablet:
   label: Tablet
-  mediaQuery: 'all and (min-width: 400px)'
+  mediaQuery: 'all and (min-width: 400px) and (max-width: 759px)'
   weight: 1
   multipliers:
     - 1x
+    - 1.5x
     - 2x
-oc_patterns.images.desk:
+oc_patterns.desk:
   label: Desk
-  mediaQuery: '(min-width: 760px)'
+  mediaQuery: 'all and (min-width: 760px) and (max-width: 1199px)'
   weight: 2
   multipliers:
     - 1x
-oc_patterns.images.bigdesk:
+oc_patterns.bigdesk:
   label: Big Desk
-  mediaQuery: '(min-width: 1200px)'
+  mediaQuery: 'all and (min-width: 1200px)'
   weight: 3
   multipliers:
     - 1x
