--- a/config/sync/core.entity_view_display.media.document.medium_embed.yml
+++ b/config/sync/core.entity_view_display.media.document.medium_embed.yml
@@ -1,9 +1,9 @@
-uuid: e7c0d0b1-2cc5-4a80-88cb-2960afcc4e89
+uuid: 240b8960-f41b-4a30-b32a-65c23e0ed863
 langcode: en
-status: false
+status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.large
+    - core.entity_view_mode.media.medium_embed
     - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
     - media.type.document
@@ -16,19 +16,19 @@ third_party_settings:
     enabled: false
     allow_custom: false
 _core:
-  default_config_hash: 8_g6JM_aaqTITnt2YCrEYwsrwgAQYFpkDEsQtm8U3Ns
-id: media.document.large
+  default_config_hash: RtAgjysVJJYmI4BBbrWoB2DKgE7ueKBWjHkaMmAuiEM
+id: media.document.medium_embed
 targetEntityType: media
 bundle: document
-mode: large
+mode: medium_embed
 content:
   field_media_file:
-    type: file_default
     weight: 0
     label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
+    type: file_default
     region: content
 hidden:
   created: true
