--- a/config/sync/core.entity_view_display.media.video.medium.yml
+++ b/config/sync/core.entity_view_display.media.video.medium.yml
@@ -1,6 +1,6 @@
 uuid: 176633f1-fca6-4ded-838b-a979a2d55adb
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.media.medium
@@ -9,7 +9,6 @@ dependencies:
     - media.type.video
   module:
     - layout_builder
-    - layout_discovery
     - video_embed_field
 third_party_settings:
   layout_builder:
