--- a/config/sync/core.entity_view_display.media.video.medium_embed.yml
+++ b/config/sync/core.entity_view_display.media.video.medium_embed.yml
@@ -1,9 +1,9 @@
-uuid: 9307a459-7dc0-4643-9dec-2ffeb23d95ae
+uuid: 3ecc21a7-d5cd-47b3-84ac-05ed1be77125
 langcode: en
-status: false
+status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.full
+    - core.entity_view_mode.media.medium_embed
     - field.field.media.video.field_media_categories
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
@@ -16,11 +16,11 @@ third_party_settings:
     enabled: false
     allow_custom: false
 _core:
-  default_config_hash: TUO4aETIQY4ejgv9Kk9szb1HvVtFkdHIo1joWAMhn0Q
-id: media.video.full
+  default_config_hash: ddOtogk2XqTPEjjKQwjzrMFapqhS7lTvNDSJltR6xz8
+id: media.video.medium_embed
 targetEntityType: media
 bundle: video
-mode: full
+mode: medium_embed
 content:
   field_media_video_embed_field:
     type: video_embed_field_video
