--- a/config/sync/core.entity_view_display.media.video.small.yml
+++ b/config/sync/core.entity_view_display.media.video.small.yml
@@ -1,6 +1,6 @@
 uuid: 73479a5e-26c2-4b49-9f69-6ba9a5dada5f
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.media.small
@@ -9,7 +9,6 @@ dependencies:
     - media.type.video
   module:
     - layout_builder
-    - layout_discovery
     - video_embed_field
 third_party_settings:
   layout_builder:
