Remove empty layout regions when no content

--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -119,6 +119,28 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          87486534-a5c9-4c3a-a462-8b37ba581c28:
+            uuid: 87486534-a5c9-4c3a-a462-8b37ba581c28
+            region: content
+            configuration:
+              id: 'field_block:node:page:field_oc_widgets'
+              label: Widgets
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: entity_reference_revisions_entity_view
+                settings:
+                  view_mode: default
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
     allow_custom: false
     is_enabled: true
     enabled: true
