--- a/config/sync/core.entity_view_display.paragraph.event_by_category.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.event_by_category.preview.yml
@@ -4,15 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.event_by_category.field_admin_description
     - field.field.paragraph.event_by_category.field_category
     - field.field.paragraph.event_by_category.field_number_of_items
-    - field.field.paragraph.event_by_category.field_viewfield
     - field.field.paragraph.event_by_category.field_widget_title
     - paragraphs.paragraphs_type.event_by_category
   module:
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -25,16 +22,14 @@ targetEntityType: paragraph
 bundle: event_by_category
 mode: preview
 content:
-  field_admin_description:
-    type: string
+  field_category:
+    type: entity_reference_label
     weight: 0
     region: content
     label: hidden
     settings:
-      link_to_entity: false
+      link: false
     third_party_settings: {  }
 hidden:
-  field_category: true
   field_number_of_items: true
-  field_viewfield: true
   field_widget_title: true
