--- a/config/sync/core.entity_view_display.taxonomy_term.tags.token.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.tags.token.yml
@@ -1,13 +1,12 @@
-uuid: c1c27e48-4520-4133-9a7b-f2b3490c7b7c
+uuid: 87779484-e7b4-453d-8425-3a10c1f960a3
 langcode: en
-status: true
+status: false
 dependencies:
   config:
+    - core.entity_view_mode.taxonomy_term.token
     - taxonomy.vocabulary.tags
   module:
     - layout_builder
-    - layout_discovery
-    - text
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -15,16 +14,10 @@ third_party_settings:
     allow_custom: false
 _core:
   default_config_hash: FZRvIfZfyUVyc9lNDXmNEESpI9EUKfwqb96sx0bPD44
-id: taxonomy_term.tags.default
+id: taxonomy_term.tags.token
 targetEntityType: taxonomy_term
 bundle: tags
-mode: default
-content:
-  description:
-    label: hidden
-    type: text_default
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-hidden: {  }
+mode: token
+content: {  }
+hidden:
+  description: true
