--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -48,3 +48,4 @@ permissions:
   - 'view paragraph content text'
   - 'view paragraph content tile_image'
   - 'view paragraph content video'
+  - 'view paragraph content view_placer'
