--- a/config/sync/core.entity_view_display.node.profiles.default.yml
+++ b/config/sync/core.entity_view_display.node.profiles.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - node.type.profiles
   module:
     - layout_builder
+    - layout_builder_restrictions
     - layout_discovery
     - system
     - telephone
@@ -173,6 +174,24 @@ third_party_settings:
     allow_custom: false
     is_enabled: true
     enabled: true
+  layout_builder_restrictions:
+    allowed_blocks:
+      AddToAny: {  }
+      'Chaos tools': {  }
+      core: {  }
+      'Custom Blocks': {  }
+      Devel: {  }
+      Flippy: {  }
+      Forms: {  }
+      Help: {  }
+      'Inline blocks': {  }
+      Menus: {  }
+      Superfish: {  }
+      System: {  }
+      User: {  }
+      Webform: {  }
+    allowed_layouts:
+      - layout_onecol
 _core:
   default_config_hash: Iiubax8789QrNj_iT59-y0hssFUHZDfqSWj9eoVD0j8
 id: node.profiles.default
