--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - datetime
     - geolocation
     - layout_builder
+    - layout_builder_restrictions
     - layout_discovery
     - metatag
     - system
@@ -147,6 +148,23 @@ third_party_settings:
     allow_custom: false
     is_enabled: true
     enabled: true
+  layout_builder_restrictions:
+    allowed_blocks:
+      'Chaos tools': {  }
+      core: {  }
+      'Custom Blocks': {  }
+      Devel: {  }
+      Flippy: {  }
+      Forms: {  }
+      Help: {  }
+      'Inline blocks': {  }
+      Menus: {  }
+      Superfish: {  }
+      System: {  }
+      User: {  }
+      Webform: {  }
+    allowed_layouts:
+      - layout_onecol
 _core:
   default_config_hash: loMHYsfHZt2ah-BioORO_TAK_v7Gf-b6gCl285D03zk
 id: node.event.default
