--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -12,6 +12,7 @@ dependencies:
   module:
     - entity_reference_revisions
     - layout_builder
+    - layout_builder_restrictions
     - layout_discovery
     - metatag
     - system
@@ -117,6 +118,23 @@ third_party_settings:
     allow_custom: true
     is_enabled: true
     enabled: true
+  layout_builder_restrictions:
+    allowed_blocks:
+      AddToAny: {  }
+      'Chaos tools': {  }
+      core: {  }
+      Devel: {  }
+      Flippy: {  }
+      Forms: {  }
+      Help: {  }
+      Menus: {  }
+      Superfish: {  }
+      System:
+        - system_breadcrumb_block
+      User: {  }
+      Webform: {  }
+    allowed_layouts:
+      - layout_onecol
 _core:
   default_config_hash: 1h2sEQ222bYyFk67-1xEhAMXEdbzEI367eTDmO2XiM8
 id: node.landing_page.default
