--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -49,6 +49,7 @@ module:
   image_style_quality: 0
   inline_entity_form: 0
   layout_builder: 0
+  layout_builder_restrictions: 0
   layout_discovery: 0
   libraries: 0
   link: 0
