UP34 - Set pager & Results mixins and default theming, set results footer on news, events, blog, staff main views.

--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -575,7 +575,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total'
+          content: 'Results: Page @current_page – @page_count'
           plugin_id: result
       empty:
         area_text_custom:
