--- a/config/sync/views.view.blog.yml
+++ b/config/sync/views.view.blog.yml
@@ -393,7 +393,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total'
+          content: 'Results: Page @current_page – @page_count'
           plugin_id: result
       empty: {  }
       relationships: {  }
@@ -460,7 +460,7 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 4
+          items_per_page: 5
           offset: 0
           id: 0
           total_pages: null
