--- a/config/sync/views.view.profiles.yml
+++ b/config/sync/views.view.profiles.yml
@@ -54,7 +54,7 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 12
+          items_per_page: 5
           offset: 0
           id: 0
           total_pages: null
@@ -365,7 +365,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total'
+          content: 'Results: Page @current_page – @page_count'
           plugin_id: result
       empty:
         area_text_custom:
