Tweak permissions and add build script to package.json

--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -101,11 +101,14 @@ permissions:
   - 'delete paragraph content tile_image'
   - 'delete paragraph content video'
   - 'edit any blog content'
+  - 'edit any document media'
   - 'edit any event content'
+  - 'edit any image media'
   - 'edit any landing_page content'
   - 'edit any news content'
   - 'edit any page content'
   - 'edit any profiles content'
+  - 'edit any video media'
   - 'edit any webform'
   - 'edit own blog content'
   - 'edit own comments'
@@ -118,9 +121,7 @@ permissions:
   - 'edit own profiles content'
   - 'edit own video media'
   - 'edit own webform submission'
-  - 'edit terms in categories'
   - 'edit terms in position'
-  - 'edit terms in tags'
   - 'post comments'
   - 'revert blog revisions'
   - 'revert event revisions'
