--- a/config/sync/user.role.senior_editor.yml
+++ b/config/sync/user.role.senior_editor.yml
@@ -19,6 +19,7 @@ permissions:
   - 'access media overview'
   - 'access panels in-place editing'
   - 'access site reports'
+  - 'access taxonomy overview'
   - 'access toolbar'
   - 'access user profiles'
   - 'access video_browser entity browser pages'
@@ -45,8 +46,8 @@ permissions:
   - 'administer panelizer node profiles layout'
   - 'administer paragraphs library'
   - 'administer redirects'
-  - 'administer taxonomy'
   - 'administer url aliases'
+  - 'administer users'
   - 'administer webform element access'
   - 'administer webform submission'
   - 'bypass honeypot protection'
@@ -88,9 +89,13 @@ permissions:
   - 'create paragraph content video'
   - 'create paragraph library item'
   - 'create profiles content'
+  - 'create terms in categories'
+  - 'create terms in media_categories'
+  - 'create terms in tags'
   - 'create url aliases'
   - 'create video media'
   - 'create webform'
+  - 'customize shortcut links'
   - 'delete all revisions'
   - 'delete any blog content'
   - 'delete any document media'
@@ -148,6 +153,7 @@ permissions:
   - 'delete paragraph content video'
   - 'delete profiles revisions'
   - 'delete terms in categories'
+  - 'delete terms in media_categories'
   - 'delete terms in position'
   - 'delete terms in tags'
   - 'edit any blog content'
@@ -175,6 +181,7 @@ permissions:
   - 'edit own webform submission'
   - 'edit paragraph library item'
   - 'edit terms in categories'
+  - 'edit terms in media_categories'
   - 'edit terms in position'
   - 'edit terms in tags'
   - 'post comments'
