--- a/web/themes/oc_patterns/package.json
+++ b/web/themes/oc_patterns/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "gulp compile && gulp theme",
+    "build": "gulp build",
     "postinstall": "rm -rf pattern-lab && composer create-project -n pattern-lab/edition-twig-standard pattern-lab && rm -rf pattern-lab/source && ln -s ../components pattern-lab/source"
   }
 }
