--- a/config/sync/core.entity_view_display.node.support_book.default.yml
+++ b/config/sync/core.entity_view_display.node.support_book.default.yml
@@ -13,6 +13,8 @@ dependencies:
     - system
     - text
     - user
+  theme:
+    - oc_patterns
 third_party_settings:
   layout_builder:
     sections:
@@ -31,50 +33,6 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 0
-          d1ae28cd-12f6-4027-a985-1bedce067873:
-            uuid: d1ae28cd-12f6-4027-a985-1bedce067873
-            region: content
-            configuration:
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              id: 'extra_field_block:node:support_book:links'
-            additional: {  }
-            weight: 1
-          8f71a7af-846d-4d6e-9793-51e791da211c:
-            uuid: 8f71a7af-846d-4d6e-9793-51e791da211c
-            region: content
-            configuration:
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              id: 'extra_field_block:node:support_book:links'
-            additional: {  }
-            weight: 2
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
-          c0ba77d7-9652-490e-b90a-575248950d2c:
-            uuid: c0ba77d7-9652-490e-b90a-575248950d2c
-            region: content
-            configuration:
-              id: 'menu_block:support-book'
-              label: 'Web Editor Guide'
-              provider: menu_block
-              label_display: visible
-              level: 1
-              depth: 0
-              expand: 1
-              parent: 'support-book:'
-              suggestion: page_menu
-              context_mapping: {  }
-            additional: {  }
-            weight: 0
-      -
-        layout_id: layout_onecol
-        layout_settings: {  }
-        components:
           ad6a5067-9af1-48ed-843a-0bf10b3a93be:
             uuid: ad6a5067-9af1-48ed-843a-0bf10b3a93be
             region: content
@@ -91,6 +49,26 @@ third_party_settings:
                 third_party_settings: {  }
               context_mapping:
                 entity: layout_builder.entity
+            additional: {  }
+            weight: 1
+      -
+        layout_id: two_column_sidebar_left
+        layout_settings: {  }
+        components:
+          c0ba77d7-9652-490e-b90a-575248950d2c:
+            uuid: c0ba77d7-9652-490e-b90a-575248950d2c
+            region: first
+            configuration:
+              id: 'menu_block:support-book'
+              label: 'Web Editor Guide'
+              provider: menu_block
+              label_display: visible
+              level: 1
+              depth: 0
+              expand: 1
+              parent: 'support-book:'
+              suggestion: page_menu
+              context_mapping: {  }
             additional: {  }
             weight: 0
           9378ea9d-cbcb-4ea7-ad2f-7de2e8e4f7c8:
@@ -109,7 +87,7 @@ third_party_settings:
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
-            weight: 1
+            weight: 0
     allow_custom: false
     is_enabled: true
     enabled: true
