--- a/config/sync/pathauto.pattern.support.yml
+++ b/config/sync/pathauto.pattern.support.yml
@@ -9,16 +9,16 @@ _core:
 id: support
 label: Support
 type: 'canonical_entities:node'
-pattern: 'support/[node:title]'
+pattern: '[node:menu-link:parents:join:/]/[node:title]'
 selection_criteria:
-  657038de-a936-4c6d-92e9-622fc5239e94:
+  3487208c-48e4-4612-b185-4f9c8032ee36:
     id: node_type
     bundles:
       support_book: support_book
     negate: false
     context_mapping:
       node: node
-    uuid: 657038de-a936-4c6d-92e9-622fc5239e94
+    uuid: 3487208c-48e4-4612-b185-4f9c8032ee36
 selection_logic: and
 weight: -5
 relationships: {  }
