--- a/config/sync/field.field.paragraph.landing_page_section.field_section_widgets.yml
+++ b/config/sync/field.field.paragraph.landing_page_section.field_section_widgets.yml
@@ -6,14 +6,12 @@ dependencies:
     - field.storage.paragraph.field_section_widgets
     - paragraphs.paragraphs_type.accordion_group
     - paragraphs.paragraphs_type.block_placer
-    - paragraphs.paragraphs_type.event_by_category
     - paragraphs.paragraphs_type.form
     - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.landing_page_section
     - paragraphs.paragraphs_type.lightbox_gallery
     - paragraphs.paragraphs_type.links_files
-    - paragraphs.paragraphs_type.news_by_category
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.slideshow
     - paragraphs.paragraphs_type.text
@@ -26,7 +24,7 @@ field_name: field_section_widgets
 entity_type: paragraph
 bundle: landing_page_section
 label: 'Section Widgets'
-description: ''
+description: 'Add paragraphs to this node. Use the layout option on each paragraph to set it''s width and use the draggable handles to set the order to create custom paragraph grids. <strong>NOTE:</strong> When customizing the layout via Layout Builder you cannot re-order paragraphs, you can only move the whole field itself.'
 required: false
 translatable: false
 default_value: {  }
@@ -38,12 +36,10 @@ settings:
     target_bundles:
       accordion_group: accordion_group
       block_placer: block_placer
-      event_by_category: event_by_category
       form: form
       image: image
       lightbox_gallery: lightbox_gallery
       links_files: links_files
-      news_by_category: news_by_category
       pullquote: pullquote
       slideshow: slideshow
       text: text
@@ -81,9 +77,6 @@ settings:
       links_files:
         enabled: true
         weight: -28
-      map:
-        enabled: true
-        weight: -27
       news_by_category:
         enabled: true
         weight: -26
