--- a/config/sync/pathauto.pattern.support.yml
+++ b/config/sync/pathauto.pattern.support.yml
@@ -9,16 +9,16 @@ _core:
 id: support
 label: Support
 type: 'canonical_entities:node'
-pattern: '[node:menu-link:parents:join:/]/[node:title]'
+pattern: 'web-editor-guide/[node:title]'
 selection_criteria:
-  3487208c-48e4-4612-b185-4f9c8032ee36:
+  3864154f-40ce-4f24-af42-3a99893b9c64:
     id: node_type
     bundles:
       support_book: support_book
     negate: false
     context_mapping:
       node: node
-    uuid: 3487208c-48e4-4612-b185-4f9c8032ee36
+    uuid: 3864154f-40ce-4f24-af42-3a99893b9c64
 selection_logic: and
 weight: -5
 relationships: {  }
