--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -28,6 +28,7 @@ permissions:
   - 'view paragraph content event_by_category'
   - 'view paragraph content form'
   - 'view paragraph content from_library'
+  - 'view paragraph content gallery'
   - 'view paragraph content horizontal_rule'
   - 'view paragraph content image'
   - 'view paragraph content landing_page_section'
