--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -42,6 +42,7 @@ permissions:
   - 'create paragraph content event_by_category'
   - 'create paragraph content form'
   - 'create paragraph content from_library'
+  - 'create paragraph content gallery'
   - 'create paragraph content horizontal_rule'
   - 'create paragraph content image'
   - 'create paragraph content landing_page_section'
@@ -83,6 +84,7 @@ permissions:
   - 'delete paragraph content event_by_category'
   - 'delete paragraph content form'
   - 'delete paragraph content from_library'
+  - 'delete paragraph content gallery'
   - 'delete paragraph content horizontal_rule'
   - 'delete paragraph content image'
   - 'delete paragraph content landing_page_section'
@@ -140,6 +142,7 @@ permissions:
   - 'update paragraph content event_by_category'
   - 'update paragraph content form'
   - 'update paragraph content from_library'
+  - 'update paragraph content gallery'
   - 'update paragraph content horizontal_rule'
   - 'update paragraph content image'
   - 'update paragraph content landing_page_section'
