--- a/config/sync/user.role.senior_editor.yml
+++ b/config/sync/user.role.senior_editor.yml
@@ -70,6 +70,7 @@ permissions:
   - 'create paragraph content event_by_category'
   - 'create paragraph content form'
   - 'create paragraph content from_library'
+  - 'create paragraph content gallery'
   - 'create paragraph content horizontal_rule'
   - 'create paragraph content image'
   - 'create paragraph content landing_page_section'
@@ -134,6 +135,7 @@ permissions:
   - 'delete paragraph content event_by_category'
   - 'delete paragraph content form'
   - 'delete paragraph content from_library'
+  - 'delete paragraph content gallery'
   - 'delete paragraph content horizontal_rule'
   - 'delete paragraph content image'
   - 'delete paragraph content landing_page_section'
@@ -204,6 +206,7 @@ permissions:
   - 'update paragraph content event_by_category'
   - 'update paragraph content form'
   - 'update paragraph content from_library'
+  - 'update paragraph content gallery'
   - 'update paragraph content horizontal_rule'
   - 'update paragraph content image'
   - 'update paragraph content landing_page_section'
