--- a/web/themes/oc_patterns/package.json
+++ b/web/themes/oc_patterns/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "natives": "^1.1.6",
     "pa11y": "^5.1.0",
-    "postcss": "^7.0.7"
+    "postcss": "^7.0.7",
+    "postcss-scss": "^2.0.0"
   }
 }
