Change layout sections to use all variable construction, add two-column sidebar right

--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -135,6 +135,7 @@ third_party_settings:
       Webform: {  }
     allowed_layouts:
       - layout_onecol
+      - two_column_sidebar_right
 _core:
   default_config_hash: 1h2sEQ222bYyFk67-1xEhAMXEdbzEI367eTDmO2XiM8
 id: node.landing_page.default
