--- a/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
@@ -8,11 +8,10 @@ dependencies:
     - paragraphs.paragraphs_type.basic_page_section
     - paragraphs.paragraphs_type.form
     - paragraphs.paragraphs_type.from_library
+    - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.image
-    - paragraphs.paragraphs_type.lightbox_gallery
     - paragraphs.paragraphs_type.links_files
     - paragraphs.paragraphs_type.pullquote
-    - paragraphs.paragraphs_type.slideshow
     - paragraphs.paragraphs_type.text
     - paragraphs.paragraphs_type.video
   module:
@@ -35,12 +34,11 @@ settings:
       accordion_group: accordion_group
       form: form
       image: image
-      lightbox_gallery: lightbox_gallery
       links_files: links_files
       pullquote: pullquote
-      slideshow: slideshow
       text: text
       video: video
+      gallery: gallery
       from_library: from_library
     target_bundles_drag_drop:
       accordion_group:
@@ -55,12 +53,6 @@ settings:
       block_placer:
         weight: -36
         enabled: false
-      call_to_action:
-        weight: -35
-        enabled: false
-      event_by_category:
-        weight: -34
-        enabled: false
       form:
         enabled: true
         weight: -33
@@ -71,33 +63,30 @@ settings:
         weight: -30
         enabled: false
       lightbox_gallery:
-        enabled: true
         weight: -29
+        enabled: false
       links_files:
         enabled: true
         weight: -28
-      map:
-        enabled: true
-        weight: -27
-      news_by_category:
-        weight: -26
-        enabled: false
       pullquote:
         enabled: true
         weight: -25
       slideshow:
-        enabled: true
         weight: -24
+        enabled: false
       text:
         enabled: true
         weight: -23
       video:
         enabled: true
         weight: -22
-      admin_view_placer:
-        weight: -21
-        enabled: false
+      gallery:
+        enabled: true
+        weight: 23
       from_library:
         enabled: true
         weight: 28
+      view_placer:
+        weight: 32
+        enabled: false
 field_type: entity_reference_revisions
