--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/gallery/gallery.yml
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/gallery/gallery.yml
@@ -2,7 +2,7 @@ widget_title:
   "Lightbox Widget"
 
 gallery_type:
-    "lightbox"
+    "Lightbox"
 
 #images thumb_src and large_src will be replaced with drupal images and need to have their sizes set manually
 images:
